docs: update jdk 19 install instructions
Remove out of date instructions for loom preview builds and now prefer
JDK 19